--- a/public/index.css
+++ b/public/index.css
@@ -18,8 +18,6 @@ body {
   align-items: center;
   padding-left: 30px;
 
-
-
 }
 
 .logo-title > img {
@@ -54,29 +52,35 @@ padding-right: 30px;
   width: 100%;
   color: #FFFFFF;
   height: 100vh;
+  background-image: url("./logo512.png");
+  background-repeat: no-repeat;
+  background-size: 222px;
+  background-position-x: 438px;
+  background-position-y: 128px;
+  
 }
 
 .main--head {
   font-family: Inter;
-font-size: 39px;
-font-weight: 700;
-line-height: 47px;
-letter-spacing: -0.05em;
-text-align: left;
-padding: 27px;
-padding-top: 50px;
-margin: 0px;
+  font-size: 39px;
+  font-weight: 700;
+  line-height: 47px;
+  letter-spacing: -0.05em;
+  text-align: left;
+  padding: 27px;
+  padding-top: 50px;
+  margin: 0px;
 
 }
 
 .main--li {
   font-family: Inter;
-font-size: 16px;
-font-weight: 400;
-line-height: 19px;
-letter-spacing: 0em;
-text-align: left;
-padding-left: 50px;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 19px;
+  letter-spacing: 0em;
+  text-align: left;
+  padding-left: 50px;
 
 }
 
